Closed
Bug 1220678
Opened 10 years ago
Closed 10 years ago
"Download Publication" link on ebook demo site crashes e10s nightly
Categories
(Core :: DOM: Service Workers, defect)
Core
DOM: Service Workers
Tracking
()
VERIFIED
FIXED
mozilla45
People
(Reporter: bkelly, Assigned: bkelly)
References
Details
Attachments
(1 file)
|
1.19 KB,
patch
|
jdm
:
review+
ritu
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Visit this site in e10s mode:
https://jakearchibald.github.io/ebook-demo/publisher-site/readme/
Make the site offline by checking the box in the upper left. Then click "Download Publication".
Nightly with e10s enabled crashes.
This is because ExternalHelperApp calls DivertToParent() on the channel so that the file can be saved to disk. With an intercepted channel, however, we do not have a parent actor. So the IPC operation fails to deserialize and crashes.
I'm going to fix the crash here and file a follow-up to make DivertToParent() work for synthesized responses.
| Assignee | ||
Comment 1•10 years ago
|
||
Attachment #8681998 -
Flags: review?(josh)
Updated•10 years ago
|
Attachment #8681998 -
Flags: review?(josh) → review+
| Assignee | ||
Updated•10 years ago
|
| Assignee | ||
Comment 3•10 years ago
|
||
Comment on attachment 8681998 [details] [diff] [review]
Don't crash when DivertToParent() is called on an intercepted channel. r=jdm
Approval Request Comment
[Feature/regressing bug #]: service workers
[User impact if declined]: Users with e10s enabled (mainly aurora/nightly) will experience crashes using sites like https://jakearchibald.github.io/ebook-demo/publisher-site/readme/
[Describe test coverage new/current, TreeHerder]: Local testing that crash does not trigger any more.
[Risks and why]: Minimal risk as it only affects service workers.
[String/UUID change made/needed]: None
Attachment #8681998 -
Flags: approval-mozilla-aurora?
Comment 4•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Comment 5•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
Comment 6•10 years ago
|
||
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
status-b2g-v2.5:
fixed → ---
Comment on attachment 8681998 [details] [diff] [review]
Don't crash when DivertToParent() is called on an intercepted channel. r=jdm
Seems like a simple patch and has baked in Nightly for a few days, let's uplift to Aurora44.
Attachment #8681998 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Florin, would the QE team be able to verify this fix work as expected and there are no unexpected fall outs from it?
Flags: needinfo?(florin.mezei)
Comment 9•10 years ago
|
||
| bugherder uplift | ||
Comment 10•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
Comment 11•10 years ago
|
||
Reproduced the crash with Nightly 45.0a1 2015-11-02 while having "Make worky offline" both checked and unchecked.
Some of the crash reports:
https://crash-stats.mozilla.com/report/index/dc5ed9ca-ea55-47b6-8bf5-caae72151111
https://crash-stats.mozilla.com/report/index/bp-5d2354af-94d4-4ca4-aad4-f1d612151111
With current Nightly 45.0a1 2015-11-10 and Aurora 44.0a2 2015-11-11 builds, there are no crashes, but the following pop-up shows up when choosing the "Download publication" link:
Downloading
could not be saved, because the source file could not be read.
Try again later, or contact the server administrator.
Is this expected?
Flags: needinfo?(florin.mezei) → needinfo?(bkelly)
| Assignee | ||
Comment 12•10 years ago
|
||
(In reply to Petruta Rasa [QA] [:petruta] from comment #11)
> Reproduced the crash with Nightly 45.0a1 2015-11-02 while having "Make worky
> With current Nightly 45.0a1 2015-11-10 and Aurora 44.0a2 2015-11-11 builds,
> there are no crashes, but the following pop-up shows up when choosing the
> "Download publication" link:
>
> Downloading
> could not be saved, because the source file could not be read.
>
> Try again later, or contact the server administrator.
Yes. This bug only fixed the crash, but we need bug 1220681 to truly fix the site on e10s. So this looks verified to me.
Thanks!
Flags: needinfo?(bkelly)
Comment 13•10 years ago
|
||
Thank you!
Comment 11 was referring to Win 7 64-bit.
I checked that the same behavior occurs under Mac OS X 10.11 and Ubuntu 14.04 64-bit.
You need to log in
before you can comment on or make changes to this bug.
Description
•