Bug 1220678 - Don't crash when DivertToParent() is called on an intercepted channel. r=jdm, a=ritu

--HG--
extra : source : 097cac1912b9658ba68389b5dd72d4cc45e762d5